# burn-in-tests-poc

./: .gitignore  README.rst  setup.cfg
burn_in_tests_poc_tempest_plugin/: README.rst  plugin.py
burn_in_tests_poc_tempest_plugin/common/: ping.py
burn_in_tests_poc_tempest_plugin/tests/api/compute/: test_create_server_burn_in.py  test_create_server_volume_burn_in.py  test_delete_server_burn_in.py
