[metadata]
name = burn-in-test-poc
author = OSIC
summary = PoC: Burn In Tests for Nova using Tempest
description-file = 
    README.rst
home-page = https://github.com/CasJ/burn-in-tests-poc
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[entry_points]
tempest.test_plugins =
    burn-in-tests-poc-tempest-plugin = burn_in_tests_poc_tempest_plugin.plugin:BurnInTestsPlugin

[pbr]
warnerrors = true
